--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -591,13 +591,18 @@
 			});
 
 			$("#pick5").on("click", function() {
-				document.querySelector("#main_capture5").classList.add('capturing');
-				html2canvas(document.querySelector("#main_capture5"), {
-					scale: 5,
-				}).then(canvas => {
-					saveAs(canvas.toDataURL('image/jpg'), "lime.jpg"); //다운로드 되는 이미지 파일 이름 지정
+				html2canvas(document.querySelector("#main_capture5")).then(canvas => {
+					var link = document.createElement('a');
+					if (typeof link.download === 'string') {
+						link.href = uri;
+						link.download = filename;
+						document.body.appendChild(link);
+						link.click();
+						document.body.removeChild(link);
+					} else {
+						window.open(uri);
+					}
 				});
-				document.querySelector("#main_capture5").classList.remove('capturing')
 			});
 
 			function saveAs(uri, filename) {
