--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -96,20 +96,20 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>icon-info</h2>
+				<h2>icon-tooltip</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-36 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-32 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-28 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-26 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-24 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-20 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-18 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-16 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-15 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-14 icon-info bg-icon-default"></i>
-					<i class="icon-only icon-12 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-48 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-tooltip bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-tooltip bg-icon-gray_1"></i>
 				</div>
 			</div>
 			<hr>
