--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* 320 해상도 대응 */
-@media (max-width:320px) {
+@media (max-width:360px) {
     .main-nav ul {gap:4px;}
     .main-figure-list ul {gap:8px;}
     .main-figure-list figure picture {flex:0 0 80px;width:80px;height:80px;}
@@ -13,4 +13,5 @@
     .figure-list figure figcaption {font-size:13px;}
 
     .shortcut-button-wrap .btn-xsmall {padding:6px;}
+    .input-wrap.input-datepicker button {font-size:15px;}
 }
