--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -201,6 +201,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap-month .ui-datepicker .ui-datepicker-header {font-size:0;gap:0;}
 .datepicker-wrap-month .ui-datepicker .ui-datepicker-header span {font-size:26px;font-weight:500;color:var(--typography-black);}
 .datepicker-wrap-month .ui-datepicker .ui-datepicker-month {display:none;}
+.datepicker-wrap-month .ui-datepicker-calendar tbody td {border-left:4px solid transparent;border-right:4px solid transparent;}
 .datepicker-wrap-month .ui-datepicker-calendar td span,
 .datepicker-wrap-month .ui-datepicker-calendar td a {display:flex;text-align:center;height:40px;width:100%;align-items:center;justify-content:center;border-radius:50px;background-color:var(--button-outlined-enabled);color:var(--button-outlined-onEnabled);border-color:var(--button-outlined-border);border-style:solid;border-width:1px;}
 
