--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -14,4 +14,5 @@
 
     .shortcut-button-wrap .btn-xsmall {padding:6px;}
     .input-wrap.input-datepicker button {font-size:15px;}
+    .stock-index-list a {}
 }
