--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -454,20 +454,21 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 
 .form-invalid .inp-circle input {border-color:var(--red-100);}
 
-.form-exchange {position:relative;display:flex;justify-content:space-between;border-radius:12px;background:var(--surface-surface);padding:24px;gap:8px;z-index:1;}
-.form-exchange .label {font-size:22px;font-weight:700;color:var(--typography-title);gap:3px;margin-bottom:0;}
+.form-exchange {position:relative;display:flex;justify-content:space-between;border-radius:12px;background:var(--surface-surface);padding:20px 24px 24px;gap:8px;z-index:1;}
+.form-exchange .label {font-size:20px;font-weight:700;color:var(--typography-title);line-height:1.5;gap:6px;margin-bottom:0;}
 .form-exchange .ex-input-wrap {flex:1}
-.form-exchange .ex-input-wrap input {height:36px;text-align:right;font-size:24px;font-weight:700;color:var(--typography-title);}
+.form-exchange .ex-input-wrap input {height:34px;text-align:right;font-size:26px;font-weight:700;color:var(--typography-title);}
 .form-exchange .ex-input-wrap input:not([readonly],[disabled]):focus-within + span:after {content:'';position:absolute;left:0;top:0;width:100%;height:100%;outline:2px solid var(--status-focused);border-radius:16px;z-index:-1;outline-offset:-2px;}
 .form-exchange .ex-input-wrap span {display:block;font-size:16px;line-height:1;font-weight:500;color:var(--typography-caption);margin-top:8px;text-align:right;}
 .form-exchange .sum {position:absolute;left:50%;top:-32px;margin-left:-12px;width:24px;height:24px;background:url(/resources/images/common/arrow_sum.svg) center center / contain no-repeat;}
-.ex-input-wrap .anchor-fluid {width:auto;padding:0;margin-left:auto;font-size:20px;font-weight:700;color:var(--typography-black);}
+.ex-input-wrap .anchor-fluid {width:auto;padding:0;margin-left:auto;font-size:26px;line-height:1.4;font-weight:700;color:var(--typography-black);gap:24px;}
 .ex-input-wrap .anchor-fluid:empty:before {content:attr(data-placeholder);color:var(--typography-disabled);}
+.ex-input-wrap .anchor-fluid:after {background-color:var(--icon-default);}
 
 .form-exchange .ex-benefit-wrap {flex:1;text-align:right;}
 .form-exchange .ex-benefit-wrap dl {}
 .form-exchange .ex-benefit-wrap dl dt {font-size:20px;font-weight:700;color:var(--typography-title);line-height:1.5;}
-.form-exchange .ex-benefit-wrap dl dd {font-size:24px;font-weight:700;color:var(--brandPrimary-blue500);line-height:1.4;margin-top:4px;}
+.form-exchange .ex-benefit-wrap dl dd {font-size:26px;font-weight:700;color:var(--brandPrimary-blue500);line-height:1.4;margin-top:4px;}
 .form-exchange .ex-benefit-wrap dl dd.sub-text {font-size:16px;font-weight:500;color:var(--typography-caption);line-height:1;}
 
 .form-wrap {display:flex;gap:8px;}
@@ -663,7 +664,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .tags .flag strong:before {flex:0 0 14px;width:14px;height:14px;}
 
 /* flag */
-.flag strong {display:flex;font-size:26px;font-weight:700;color:var(--typography-title);line-height:36px;gap:8px;align-items:center;}
+.flag strong {display:flex;font-size:24px;font-weight:700;color:var(--typography-title);line-height:34px;gap:8px;align-items:center;}
 .flag strong:before {content:'';flex:0 0 24px;width:24px;height:24px;background-size:contain;background-position:center center;background-repeat:no-repeat;}
 .flag.noflag strong:before {display:none;}
 .flag-asia strong:before{background-image:url(/resources/images/flag/flag_asia.svg)}
@@ -803,6 +804,10 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .icon-percent {
     -webkit-mask-image:url(/resources/images/icon_only/icon_percent.svg);
     mask-image:url(/resources/images/icon_only/icon_percent.svg);
+}
+.icon-percent2 {
+    background-color:initial;
+    background-image:url(/resources/images/icon_only/icon_percent2.svg);
 }
 .icon-calculator {
     -webkit-mask-image:url(/resources/images/icon_only/icon_calculator.svg);
