--- a/html/components/component_handover.html
+++ b/html/components/component_handover.html
@@ -174,7 +174,7 @@
 		</li>
 		<li>
 			<strong>사용한 기술 스택(HTML, CSS, JavaScript 등)</strong>
-			<p>HTML, CSS, JS, Plugins(<a href="../plugins/library.md" target="_blank" class="underline">html/plugins/library.md</a> 안에 상세 내용 삽입)</p>
+			<p>HTML, CSS, JS, Plugins(<a href="../plugins/library.md" target="_blank" class="underline">publish/plugins/library.md</a> 안에 상세 내용 삽입)</p>
 		</li>
 		<li>
 			<strong>반응형 웹 여부</strong>
