--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -1013,6 +1013,24 @@
 					<i class="icon-only icon-12 icon-sound2 bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-loading</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-file-loader bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-file-loader bg-icon-gray_1"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
