--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -491,7 +491,7 @@
 .rate-NR {border-color:#F04B27;}
 .rate-CCC .rate,
 .rate-CC .rate,
-.rate-C .rate
+.rate-C .rate,
 .rate-D .rate,
 .rate-NR .rate {color:#F04B27;}
 
