--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -596,3 +596,5 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .inflex {display:inline-flex!important;}
 
 .noafter:after {display:none;}
+
+.lh130 {line-height:1.3!important;}
