--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -158,7 +158,9 @@ button.toast-close-button {position:absolute;right:12px;top:14px;font-size:0;wid
     background-repeat:no-repeat;
     background-color:var(--background-bg_white);
 }
-
+.toast-dimmed {pointer-events:auto!important;}
+.toast-dimmed:after {content:'';position:fixed;left:0;top:0;width:100%;height:100%;background-color:var(--status-dimmed);z-index:calc(var(--modal-zIndex) + 1);}
+.toast-dimmed .toast {z-index:calc(var(--modal-zIndex) + 2);}
 /* datepicker-wrap */
 .datepicker-wrap {}
 .datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:auto;position:relative;overflow:hidden;}
