--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -22,6 +22,7 @@
 
     .chatgpt-wrap .chatgroup.chatgroup-body {padding-bottom:calc(69px + 24px);background-color:var(--background-bg_lightBlue);}
     .chatgpt-wrap .bottom-btn {position:fixed;left:50%;bottom:0;width:50%;}
+    .message-notice {width:100%;}
 
     /* ui-plugins */
     #toast-container {max-width:360px;}
