--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -109,7 +109,7 @@
 .pinch-zoom-container {width:100%!important;}
 
 /* business-card-info */
-.business-card-info {}
+.business-card-info {margin-top:40px;}
 .business-card-info .info-title {}
 .business-card-info .info-title .info-name {display:flex;justify-content:space-between;}
 .business-card-info .info-title .info-name .info-thumb {display:flex;gap:12px;align-items:center;margin:0 4px;}
@@ -202,7 +202,7 @@
 
 /* info-anchor */
 .info-anchor {padding:8px 16px 18px;background-color:var(--white-100);}
-.info-anchor ul {display:flex;justify-content:space-around;gap:auto;}
+.info-anchor ul {display:flex;justify-content:space-around;}
 .info-anchor ul li {flex:0 1 60px;;}
 .info-anchor ul li button {display:flex;width:100%;flex-direction:column;align-items:center;gap:8px;}
 .info-anchor ul li button span {font-size:14px;color:var(--typography-caption);}
