--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -211,7 +211,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .modal__footer .financial-player-title strong {display:none;}
 
 .main-nav {background-color:var(--background-bg_white);box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
-.main-nav ul {display:flex;padding:8px 12px;gap:8px;}
+.main-nav ul {display:flex;padding:8px 12px;gap:8px;max-width:480px;margin:0 auto;}
 .main-nav ul li {flex:1;}
 .main-nav ul li a {display:flex;flex-direction:column;align-items:center;justify-content:center;padding:12px 0 10px;gap:8px;border-radius:18px;}
 .main-nav ul li a .icon {position:relative;width:32px;height:32px;}
