--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -37,12 +37,9 @@
     .section-tablet-right > .mt40:first-child {margin-top:16px!important;}
     .section-tablet-row .bottom-btn {margin:0;}
 
-    .section-tablet-half {display:flex;flex-direction:row;justify-content:space-between;max-height:calc(100vh - 52px);overflow:hidden;padding:0;margin:0 -16px;background: var(--background-bg_lightGray);}
+    .section-tablet-half {display:flex;flex-direction:row;justify-content:space-between;max-height:calc(100vh - 52px - 94px);overflow:hidden;padding:0;margin:0 -16px;background: var(--background-bg_lightGray);}
     .section-tablet-half .section {flex:0 0 calc(50% - 4px);max-width:calc(50% - 4px);overflow:auto;padding:0 16px;background-color:var(--background-bg_white);}
     .section-tablet-half .divide {height:4px;background: var(--background-bg_lightGray);}
-
-    .bottom-btn-main {position:fixed;width:480px;left:50%;bottom:24px;transform:translateX(-50%);}
-    .bottom-btn-main .main-nav {border-radius: 26px;box-shadow: 0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
 
     /* ui-plugins */
     #toast-container {max-width:360px;}
