--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -158,12 +158,7 @@
 								</div>
 								<div class="bottom">
 									<ul>
-										<link rel="preconnect" href="https://fonts.googleapis.com">
-										<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-										<link href="https://fonts.googleapis.com/css2?family=42dot+Sans:wght@300..800&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-										<li style="font-family:'42dot Sans'">LabelⅢ</li>
-										<li style="font-family:'Noto Serif'">LabelⅢ</li>
-										<li style="font-family:'Roboto Slab'">LabelⅢ</li>
+										<li>LevelⅢ</li>
 										<li>CFP(국제공인재무설계사)</li>
 										<li>신용위험분석사(CRA)2차</li>
 										<li>신용위험분석사(CRA)1차</li>
