--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -175,7 +175,7 @@
 .bs-card .contact .row .td {display:table-cell;font-size:9px;font-weight:500;line-height:1.3;color:var(--typography-body);text-align:right;}
 .bs-card .contact .row:not(:last-child) .th,
 .bs-card .contact .row:not(:last-child) .td {border-bottom:2px solid transparent;}
-.bs-card .bottom {padding:8px 12px;background-color:var(--surface-surface100);border-radius:0 0 8px 8px;min-height:26px;}
+.bs-card .bottom {padding:8px 12px;background-color:var(--surface-surface100);border-radius:0 0 8px 8px;min-height:26px;font-family:'42DotSans'}
 .bs-card .bottom ul {display:flex;gap:2px 6px;flex-wrap:wrap;}
 .bs-card .bottom ul li {font-size:8px;font-weight:400;color:var(--typography-gray);line-height:1.3;}
 
