--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -22,6 +22,7 @@
     .is-mobile {display:block;}
     .is-tablet {display:none;}
     .ui-tab {display:none;}
+    .group-form-tablet > *:not(:last-child) {margin-bottom:8px;}
 }
 
 @media (min-width:768px) {
@@ -42,6 +43,7 @@
     .section-tablet-half {display:flex;flex-direction:row;justify-content:space-between;max-height:calc(100vh - 52px - 94px);overflow:hidden;padding:0;margin:0 -16px;background:var(--background-bg_lightGray);}
     .section-tablet-half .section {flex:0 0 calc(50% - 4px);max-width:calc(50% - 4px);overflow:auto;padding:0 16px;background-color:var(--background-bg_white);}
     .section-tablet-half .divide {height:4px;background:var(--background-bg_lightGray);}
+    .btn-wrap .btn-outlined {flex:0 0 302px;}
 
     /* ui-plugins */
     #toast-container {max-width:360px;}
@@ -71,12 +73,14 @@
     .datepicker-wrap-month .ui-datepicker-calendar td span,
     .datepicker-wrap-month .ui-datepicker-calendar td a {height:101.33px;}
 
+    div:where(.swal2-container) div:where(.swal2-popup) {max-width:288px;}
+
     /* ui-style */
     .tablet-maxwidth {padding-left:146px;padding-right:146px;}
     .tablet-maxwidth-fluid {margin-left:-16px;margin-right:-16px;}
-    .customer-contribution-list .stroke.stroke4{display:none;}
-    .business-card-customer-list {display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:0;margin-top:12px;}
-    .business-card-customer {padding:24px 40px;border-radius:8px;border:1px solid rgba(12, 12, 13, 0.08);box-shadow:0px 0.5px 0px 0px rgba(12, 12, 13, 0.04), 0px 2px 4px -1px rgba(12, 12, 13, 0.04);}
+    .tab-content .tab-col {justify-content:center;}
+    .tab-content .tab-col li {flex:0 1 164px;}
+    .group-form-tablet {display:flex;gap:24px;justify-content:center;}
 
     /* ui-content */
     .chatgpt-wrap {display:flex;height:calc(100vh - 52px);overflow:hidden;}
@@ -96,7 +100,8 @@
     .bottom-btn-contact {position:fixed;margin:0 0 58px 58px;}
     .bottom-btn-contact .info-anchor {box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);border-radius:26px;}
 
-    .tablet-grid {display:grid;grid-template-columns:repeat(3, 1fr);gap:12px;}
+    .tablet-grid {display:grid;grid-template-columns:repeat(2, 1fr);gap:12px;}
+    .tablet-grid.tablet-grid-3 {display:grid;grid-template-columns:repeat(3, 1fr);gap:12px;}
     .customer-card-list .tablet-grid .customer-card:not(:last-child) {margin:0;}
 
     .ui-tab {position:fixed;top:50%;transform:translateY(-50%);width:52px;height:52px;background-color:var(--surface-surface50);border-radius:50%;display:flex;align-items:center;justify-content:center;}
@@ -104,5 +109,11 @@
     .ui-tab-prev:before {content:'';display:flex;width:100%;height:100%;background:url(/resources/images/arrow/arrow_date_prev.svg) center center / 12px 24px no-repeat;} 
     .ui-tab-next {right:24px;}
     .ui-tab-next:before {content:'';display:flex;width:100%;height:100%;background:url(/resources/images/arrow/arrow_date_next.svg) center center / 12px 24px no-repeat;} 
+    
+    .customer-contribution-list .stroke.stroke4{display:none;}
+    .business-card-customer-list {display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:0;margin-top:12px;}
+    .business-card-customer {padding:24px 40px;border-radius:8px;border:1px solid rgba(12, 12, 13, 0.08);box-shadow:0px 0.5px 0px 0px rgba(12, 12, 13, 0.04), 0px 2px 4px -1px rgba(12, 12, 13, 0.04);}
+
+
 }
 
