--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -291,16 +291,16 @@ button.select.is-modal-open {outline:2px solid var(--status-focused);outline-off
 .inp-large label {}
 .inp-large input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 27px;width:27px;height:27px;background:url(/resources/images/form/form-checkbox-large.svg) center center / 24px 24px no-repeat;}
 .inp-large input[type="checkbox"]:checked {background:url(/resources/images/form/form-checkbox-large-checked.svg) center center / 24px 24px no-repeat;}
-.inp-large .label-title {display:block;font-size:20px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.inp-large .label-title {display:block;font-size:20px;line-height:24px;font-weight:700;color:var(--typography-title);}
 .inp-large .label-subtitle {display:block;font-size:15px;color:var(--typography-body);margin-top:8px;font-weight:400;}
 
 .inp-medium {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp-medium label {}
-.inp-medium input[type="checkbox"] {position:absolute;left:0;top:2px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/form/form-checkbox-medium.svg) center center / contain no-repeat;}
+.inp-medium input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/form/form-checkbox-medium.svg) center center / contain no-repeat;}
 .inp-medium input[type="checkbox"]:checked {background:url(/resources/images/form/form-checkbox-medium-checked.svg) center center / contain no-repeat;}
 .inp-medium input[type="checkbox"]:disabled {background:url(/resources/images/form/form-checkbox-medium-disabled.svg) center center / contain no-repeat;}
 .inp-medium input[type="checkbox"]:disabled:checked {background:url(/resources/images/form/form-checkbox-medium-disabled-checked.svg) center center / contain no-repeat;}
-.inp-medium .label-title {display:block;font-size:18px;line-height:1.5;color:var(--typography-gray);min-height:26px;}
+.inp-medium .label-title {display:block;font-size:18px;line-height:24px;color:var(--typography-gray);}
 .inp-medium .label-subtitle {display:block;font-size:15px;font-weight:400;color:var(--typography-body);margin-top:8px;}
 
 .inp-small {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
@@ -310,12 +310,12 @@ button.select.is-modal-open {outline:2px solid var(--status-focused);outline-off
 .inp-small .label-title {display:block;font-size:15px;font-weight:400;line-height:1.6;color:var(--typography-body);margin:2px 0 1px;}
 .inp-small .chevron-only {margin-top:2px;}
 
-.inp-large input[type="radio"] {position:absolute;left:0;top:2px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/form/form-radio-large.svg) center center / contain no-repeat;}
+.inp-large input[type="radio"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/form/form-radio-large.svg) center center / contain no-repeat;}
 .inp-large input[type="radio"]:checked {background:url(/resources/images/form/form-radio-large-checked.svg) center center / contain no-repeat;}
 .inp-large input[type="radio"] ~ .label-title {font-weight:500;color:var(--typography-gray);}
 .inp-large input[type="radio"]:checked ~ .label-title {font-weight:700;color:var(--typography-title);}
 
-.inp-medium input[type="radio"] {position:absolute;left:0;top:3px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 20px;width:20px;height:20px;background:url(/resources/images/form/form-radio-medium.svg) center center / contain no-repeat;}
+.inp-medium input[type="radio"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/form/form-radio-medium.svg) center center / contain no-repeat;}
 .inp-medium input[type="radio"]:checked {background:url(/resources/images/form/form-radio-medium-checked.svg) center center / contain no-repeat;}
 .inp-medium input[type="radio"] ~ .label-title {font-weight:400;color:var(--typography-gray);}
 .inp-medium input[type="radio"]:checked ~ .label-title {font-weight:500;color:var(--typography-title);}
@@ -344,7 +344,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .inp-combi input[type="radio"] {top:16px;}
 .inp-combi:focus-within .input-medium {background-color:var(--surface-surface100);}
 /* inp-group */
-.inp-group {display:flex;flex-wrap:wrap;gap:24px;padding:16px 8px;}
+.inp-group {display:flex;flex-wrap:wrap;gap:24px;padding:14px 8px;}
 
 /* inpboard */
 .inp-board {display:grid;grid-template-columns:repeat(3, 1fr);gap:4px;}
